<resources>
    <string name="app_name">StuAid</string>
    <string name="title_activity_home_page">HomePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="planer">Planer</string>
    <string name="noten">Noten</string>
    <string name="to_do">To-Do</string>
    <string name="stuaid">StuAid</string>
    <string name="made_by_m_amp_h"><![CDATA[Made by M&H]]></string>
    <string name="exams">exams</string>
    <string name="grades">grades</string>
    <string name="tasks">tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>