<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmain4"
    android:orientation="vertical"
    tools:context=".activities.Grades">

   <Button
       android:id="@+id/home_button_noten"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="60dp"
       android:background="@android:color/transparent"
       android:fontFamily="@font/megrim"
       android:lineSpacingExtra="60sp"
       android:rotationX="0"
       android:text="@string/stuaid"
       android:textAllCaps="false"
       android:textColor="#514440"
       android:textSize="24sp"
       android:textStyle="bold"
       android:typeface="normal"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:text="StuAid" />

   <Button
       android:id="@+id/planer_button_noten"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="60dp"
       android:layout_marginEnd="10dp"
       android:fontFamily="@font/suranna"
       android:text="@string/exams"
       android:textColor="#3E3330"
       android:textSize="19sp"
       android:background="@android:color/transparent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/noten_button_noten"
       app:layout_constraintStart_toStartOf="parent"/>

   <Button
       android:id="@+id/noten_button_noten"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="60dp"
       android:fontFamily="@font/suranna"
       android:text="@string/grades"
       android:textColor="#3E3330"
       android:textSize="19sp"
       android:background="@android:color/transparent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />

   <Button
       android:id="@+id/todo_button_noten"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="60dp"
       android:layout_marginStart="5dp"
       android:fontFamily="@font/suranna"
       android:text="@string/tasks"
       android:textColor="#3E3330"
       android:textSize="19sp"
       android:background="@android:color/transparent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/noten_button_noten" />




   <Button
       android:id="@+id/test"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/next"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />


   <TextView
       android:id="@+id/button_semester"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="40dp"
       android:layout_marginTop="120dp"
       android:text="SEMESTER"
       android:textColor="#3E3330"
       android:fontFamily="@font/suranna"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:ignore="HardcodedText" />

   <TextView
       android:id="@+id/durchschnitt_1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="120dp"
       android:text="\u00D8"
       android:textColor="#3E3330"
       android:fontFamily="@font/suranna"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toStartOf="@id/kompensationspunkte"
       android:layout_marginEnd="40dp"
       tools:ignore="HardcodedText"
       tools:layout_editor_absoluteX="169dp" />

   <TextView
       android:id="@+id/kompensationspunkte"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="120dp"
       android:layout_marginEnd="40dp"
       android:fontFamily="@font/suranna"
       android:text="+/-"
       android:textColor="#3E3330"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>


