<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C7C7C7"
    android:orientation="vertical"
    tools:context="Homepage">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/great_vibes"
            android:gravity="center_horizontal|center_vertical"
            android:text="StuAid"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="96sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_gravity="bottom">


        <Button
            android:id="@+id/button_noten"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/appBackground"
            android:fontFamily="serif"
            android:text="@string/noten"
            android:textColor="#8B4C39"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_planer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/button_noten"
            android:background="@color/appBackground"
            android:fontFamily="serif"
            android:text="@string/planer"
            android:textColor="#8B4C39"
            android:textSize="18sp" />
        <!--style="?android:attr/buttonBarButtonStyle"-->

        <Button
            android:id="@+id/button_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/button_noten"
            android:background="@color/appBackground"
            android:fontFamily="serif"
            android:text="@string/to_do"
            android:textColor="#8B4C39"
            android:textSize="18sp" />
        <!--style="?android:attr/buttonBarButtonStyle"-->
    </RelativeLayout>

</LinearLayout>