<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmain4"
    android:orientation="vertical"
    tools:context=".activities.Task">


    <Button
        android:id="@+id/home_button_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/megrim"
        android:text="StuAid"
        android:textAllCaps="false"
        android:textColor="#514440"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tasksText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Tasks"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_button_todo" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tasksText"
        android:nestedScrollingEnabled="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabtasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/black"
        android:src="@drawable/ic_baseline_add" />



    <Button
        android:id="@+id/planer_button_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/suranna"
        android:text="@string/exams"
        android:textColor="#3E3330"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/noten_button_todo"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/noten_button_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/suranna"
        android:gravity="center_horizontal"
        android:text="@string/grades"
        android:textColor="#3E3330"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/todo_button_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#DCA456"
        android:clickable="false"
        android:fontFamily="@font/suranna"
        android:outlineAmbientShadowColor="@android:color/transparent"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:text="@string/tasks"
        android:textColor="#3E3330"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/noten_button_todo" />



</androidx.constraintlayout.widget.ConstraintLayout>